# genetic-snake-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: bench_tests.rs  game_engine.rs  genetic_agent.rs  heuristic_bot.rs  interactive_bot.rs  learning.rs  main.rs  random_agent.rs  random_bot.rs
