[package]
# TODO: Change the package name to "genetic-snake-rust"
name = "snake-ai"
version = "0.1.0"
authors = ["Thomas Lacroix <toto.rigolo@free.fr>"]
keywords = ["snake-game", "genetic", "algorithm"]
description = """
Learning to play Snake with Genetic Algorithm.
"""
readme = "README.md"
repository = "https://github.com/totorigolo/genetic-snake-rust"
edition = "2018"

[dependencies]
rand = "*"
genevo = "*"
colored = "*"
lazy_static = "*"
rayon = "*"
indicatif = "*"
console = "*"
dialoguer = { git = "https://github.com/mitsuhiko/dialoguer" }
ctrlc = "*"
chrono = "*"

[profile.release]
debug = true
