[package]
# TODO: Change the package name to "genetic-snake-rust"
name = "snake-ai"
version = "0.1.0"
authors = ["Thomas Lacroix <toto.rigolo@free.fr>"]
keywords = ["snake-game", "genetic", "algorithm"]
description = """
Learning to play Snake with Genetic Algorithm.
"""
readme = "README.md"
repository = "https://github.com/totorigolo/genetic-snake-rust"
edition = "2018"

[dependencies]
rand = "0.7"
genevo = "0.2"
colored = "1"
lazy_static = "1"
rayon = "1"
indicatif = "0.14"
console = "0.9"
dialoguer = "0.5"
ctrlc = "3.1"
chrono = "0.4"

[profile.release]
debug = true
